--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE hmtl> 
+<!DOCTYPE hmtl>
 <html>
 <head>
 	<meta charset="utf-8" />
@@ -9,7 +9,7 @@
 
 <body>
 
-<nav>
+<nav class="haut">
 	<ul>
 		<li>
 			<a href="ttps://mail.google.com/mail/?tab=wm&authuser=0">Gmail</a>
@@ -22,26 +22,28 @@
 
 
 <main>
-<div>
+	<div class="logo">
 
 
-	<img src=https://www.google.fr/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png /> 
+	<img src=https://www.google.fr/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png />
 
 </div>
 
 <div>
 	</div>
 
-	<div>
+	<center>
+	<div class="boutons">
 		<p>Recherche Google</p>
 	</div>
 
-	<div>
+	<div class="boutons">
 		<p>J'ai de la chance</p>
 	</div>
+</center>
 
-	<div>
-		<p>Google disponible en : </p>
+	<div class="english">
+		<p>Google disponible en : <a href="https://www.google.fr/setprefs?sig=0_78g5AIK89zNKBFqsPRN_xS_xD8Q%3D&hl=en&source=homepage&sa=X&ved=0ahUKEwju1Zveqc3YAhVFWRQKHSNLBL4Q2ZgBCAg0">English</a></p>
 	</div>
 
 
