--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
 
 	<body>
 		<nav class="haut">
-			<p>
+			<p class="hypertexte">
 				<a href="https://mail.google.com/mail/?tab=wm&authuser=0">Gmail</a>
 			  <a href="https://www.google.fr/imghp?hl=fr&tab=wi&authuser=0">Images</a>
+		
+		<a href="https://www.google.fr/intl/fr/options/"><img src="vignette.png" onmouseover="this.src='vignetteh.png'" onmouseout="this.src='vignette.png'"/></a>
+		<a href="https://accounts.google.com/ServiceLogin?hl=fr&passive=true&continue=https://www.google.fr/"><img src="connexion.png"></a>
 			</p>
 		</nav>
 
@@ -20,8 +23,12 @@
 				<img src=https://www.google.fr/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png />
 			</div>
 
-			<div>
-			</div>
+			<center>
+				<form>
+					<input type="Search">
+				</form>
+			</center>
+
 
 			<center>
 				<div class="boutons">
@@ -43,7 +50,7 @@
 				<p>France</p>
 			</div>
 
-			<div class="footer">
+			<div class="footer hypertexte">
 				<p>
 					<a href="https://www.google.fr/url?sa=t&rct=j&q=&esrc=s&source=webhp&cd=&cad=rja&uact=8&ved=0ahUKEwjV5ZSCus3YAhUMb5oKHTLLBpUQkdQCCAo&url=https%3A%2F%2Fwww.google.fr%2Fintl%2Ffr_fr%2Fads%2F%3Fsubid%3Dww-ww-et-g-awa-a-g_hpafoot1_1!o2%26utm_source%3Dgoogle.com%26utm_medium%3Dreferral%26utm_campaign%3Dgoogle_hpafooter%26fg%3D1&usg=AOvVaw2uB175PdVvu_s_Oh5IRJXX">Publicité</a>
 					<a href="https://www.google.fr/url?sa=t&rct=j&q=&esrc=s&source=webhp&cd=&cad=rja&uact=8&ved=0ahUKEwjV5ZSCus3YAhUMb5oKHTLLBpUQktQCCAs&url=https%3A%2F%2Fwww.google.fr%2Fservices%2F%3Fsubid%3Dww-ww-et-g-awa-a-g_hpbfoot1_1!o2%26utm_source%3Dgoogle.com%26utm_medium%3Dreferral%26utm_campaign%3Dgoogle_hpbfooter%26fg%3D1&usg=AOvVaw3oBerwhZw46LsPtxWHNJJA">Entreprise</a>
