--- a/index.html
+++ b/index.html
@@ -22,21 +22,24 @@
 				<img src=https://www.google.fr/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png />
 			</div>
 
+			<div>
 			<center>
 				<form>
 					<input type="Search">
 				</form>
 			</center>
+		</div>
 
-
+		<div>
 			<center>
-				<div class="boutons">
-					<p style="font-weight:700; color: gray">Recherche Google</p>
-				</div>
-				<div class="boutons">
-					<p style="font-weight:700; color: gray">J'ai de la chance</p>
-				</div>
+				<button href="#" class="button">
+					<p>Recherche Google</p>
+				</button>
+				<button href="#" class="button">
+					<p>J'ai de la chance</p>
+				</button>
 			</center>
+		</div>
 
 			<div class="english">
 				<p>Google disponible en : <a href="https://www.google.fr/setprefs?sig=0_78g5AIK89zNKBFqsPRN_xS_xD8Q%3D&hl=en&source=homepage&sa=X&ved=0ahUKEwju1Zveqc3YAhVFWRQKHSNLBL4Q2ZgBCAg0">English</a></p>
